# io-redirect

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
examples/: selftest.rs
src/: lib.rs
tests/: std_redirection_test.rs
