[package]
name = "io-redirect"
version = "0.0.1"
authors = ["Mehmet Akbulut"]
edition = "2021"

[dependencies]
libc = { version = "0.2.175" }
windows-sys = { version = "0.60.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Console", "Win32_System_IO", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3.21.0"