[package]
name = "io-redirect"
version = "0.0.1"
authors = ["Mehmet Akbulut"]
edition = "2021"

[features]
default = ["libc_on_unix", "windows-sys"]
libc_on_unix = ["libc"]
libc_on_windows = ["libc"]

[dependencies]
libc = { version = "0.2.175", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", optional = true, features = ["Win32_Foundation", "Win32_System_Console"] }

[dev-dependencies]
tempfile = "3.21.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"